[metadata]
name = ruuvitag-hark
version = 0.1.0
author = Fredrik Salomonsson
author_email = plattfot@gmail.com
url = https://github.com/plattfot/ruuvitag-hark
license = GNU General Public License v3 (GPLv3) (GPL)

[options]
package_dir =
    = src
packages = find_namespace:
entry_points =
    [console_scripts]
    ruuvitag-hark = ruuvitag.hark:main
install_requires =
    bleson >= 0.1.6
    ruuvitag-sensor >= 1.1.0
    toml >= 0.10.1
    aiohttp >= 3.6.2

[options.packages.find]
where = src

